test/spec_vectors/i64/fail/module_8.wat
(module (func (result i64) (i64.rem_u (i32.const 0) (f32.const 0))))